fix: horizontal scroll bar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,9 +19,8 @@ input[type='text'] {
 }
 
 #root {
-  height: 100vh;
-  width: 100vw;
-  // overflow: hidden;
+  height: 100%;
+  width: 100%;
 }
 #navbar {
   @include flexRow(center, center);
